# data-science-katas

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
ab_testing/: 01_ecommerce_conversion_rate_ab_test.ipynb  02_saas_session_duration_ab_test.ipynb  03_bayesian_ab_testing.ipynb  04_multivariant_landing_page_test.ipynb  05_ab_testing_interview_qa.ipynb  AB_TESTING_CHEATSHEET.md  AB_TESTING_GUIDELINE.md  ab_testing_statistical_tests.md
algorithms/: binary_search.py  linear_search.py  merge_sort_on_array.py  merge_sort_on_linked_list.py  recursive_binary_search.py
algorithms_data_structures/: NOTES.md
data_structures/: arrays.py  linked_list.py
langgraph/: 01_first_graph.ipynb  01_first_graph_exercise.ipynb  02_multiple_inputs_graph.ipynb  02_multiple_inputs_graph_exercise.ipynb  03_sequential_graph.ipynb  03_sequential_graph_exercise.ipynb  04_conditional_graph.ipynb  04_conditional_graph_exercise.ipynb  05_looping_graph.ipynb  05_looping_graph_exercise.ipynb
machine_learning/: 01_linear_regression_normal_equation.ipynb  03_linear_regression_interview_qa.ipynb  04_gradient_descent_interview_qa.ipynb  05_logistic_regression.ipynb  05_logistic_regression_implementation.ipynb  batch_online_learning_cheatsheet.md  classification_metrics_cheatsheet.md  feature_scaling.md  linear_regression_and_grad_descent.md  linear_regression_cheatsheet.md  logistic_regression_cheatsheet.md  regression_metrics_cheatsheet.md  regularization_techniques.md
numpy/: 01_numpy_basics_questions.ipynb  01_numpy_basics_solutions.ipynb  02_array_indexing_and_slicing_questions.ipynb  02_array_indexing_and_slicing_solutions.ipynb  03_array_manipulation_questions.ipynb  03_array_manipulation_solutions.ipynb  04_mathematical_operations_questions.ipynb  04_mathematical_operations_solutions.ipynb  05_linear_algebra_questions.ipynb  05_linear_algebra_solutions.ipynb  06_random_number_generation_questions.ipynb  06_random_number_generation_solutions.ipynb  07_understanding_array_data_types_questions.ipynb  07_understanding_array_data_types_solutions.ipynb  (+4 more)
(+260 files in other folders)
