[project]
name = "data-science-katas"
version = "0.1.0"
description = "Repo of katas for several data science topics"
authors = [
    {name = "Maldu",email = "anamld62@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
