[project]
name = "data-science-katas"
version = "0.1.0"
description = "Repo of katas for several data science topics"
authors = [
    {name = "Maldu",email = "anamld62@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
